# ReadStream

./: CMakeLists.txt
include/: FileReadStream.h  IReadStream.h
source/: CMakeLists.txt  FileReadStream.cpp  IReadStream.cpp
test/: CMakeLists.txt  ReadStreamTest.cpp
